--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
 
     <script type="text/javascript"
         src="//maps.googleapis.com/maps/api/js?key=AIzaSyCn33GI9WY-wog7Ct6xf57HjNMYOFEW-bk&libraries=geometry"></script>
-    <script type="module" src="index.js"></script>
+    <script type="text/javascript" src="index.js"></script>
     </body>
 
 </html>
