--- a/index.html
+++ b/index.html
@@ -34,9 +34,9 @@
                     </div>
                 </div>
                 <div class="col-sm-12 mt-2 px-2">
-                    <h3 class="title my-0 px-2" id="title" style="font-size:14px" id="search-result">Store list</h3>
+                    <h3 class="title my-0 px-2" id="title" style="font-size:14px" id="search-result">Hospital list</h3>
                 </div>
-                <div class="col-sm-12 mt-2 list-store" id="list-store">
+                <div class="col-sm-12 my-2 list-store" id="list-store">
                 </div>
             </div>
         </div>
