--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
                         <option value="08008">Long Beach Township, New Jersey</option>
                     </select>
                 </div>
-                <div class="col-1 col-sm-1 pr-2 my-2">
+                <div class="col-1 col-sm-1 pr-2 mt-2">
                     <div class="w-100 h-100" id="dialog_btn"
                         style="position:relative !important;border-radius: 0px;background-color: transparent;">
                         <i class="icon fa fa-table icon-table icon-center"
