--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
 
         <dialog class="rounded-sm shadow-md w-100 h-100" id="dialog">
             <h2 class="mb-4 text-3xl text-gray-500 font-bold pl-2">
-                <div> Hospitals Data</div>
+                <div class="pt-2"> Hospitals Data</div>
                 <i class="icon fa fa-remove fa-sm icon-close" id="close_dialog_btn"></i>
             </h2>
             <div class="tableFixHead">
