--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
                         <option value="60119">60119</option>
                         <option value="53821">53821</option>
                         <option value="08088">08088</option>
+                        <option value="32812">Orlando, Florida</option>
                         <option value="40503">Lexington KY</option>
                         <option value="08008">Long Beach Township, New Jersey</option>
                     </select>
