--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
                         <option value="53821">53821</option>
                         <option value="08088">08088</option>
                         <option value="32812">Orlando, Florida</option>
-                        <option value="40503">Lexington KY</option>
+                        <option value="40503">Lexington, KY</option>
                         <option value="08008">Long Beach Township, New Jersey</option>
                     </select>
                 </div>
